<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.AddProductFrag">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:text="@string/Add_Product_Frag_TV_txt_code"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_weight="3"
                android:gravity="center"
                android:autofillHints="name"
                android:inputType="text"
                android:layout_height="match_parent"
                android:hint="@string/Add_Product_Frag_ET_hint_code"
                android:id="@+id/Add_Product_Frag_ET_id_code"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:text="@string/Add_Product_Frag_TV_txt_name"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_weight="3"
                android:gravity="center"
                android:autofillHints="address"
                android:inputType="text"
                android:layout_height="match_parent"
                android:hint="@string/Add_Product_Frag_ET_hint_name"
                android:id="@+id/Add_Product_Frag_ET_id_name"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:text="@string/Add_Product_Frag_TV_txt_supplier"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_weight="3"
                android:autofillHints="phone"
                android:inputType="text"
                android:layout_height="match_parent"
                android:gravity="center"
                android:hint="@string/Add_Product_Frag_ET_hint_supplier"
                android:id="@+id/Add_Product_Frag_ET_id_supplier"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:text="@string/Add_Product_frag_TV_txt_production_date"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_weight="3"
                android:autofillHints="phone"
                android:inputType="text"
                android:layout_height="match_parent"
                android:gravity="center"
                android:hint="@string/Add_Product_frag_ET_hint_production_date"
                android:id="@+id/Add_Product_Frag_ET_id_productionDate"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:text="@string/Add_Product_frag_TV_txt_expire_date"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_weight="3"
                android:autofillHints="phone"
                android:inputType="text"
                android:layout_height="match_parent"
                android:gravity="center"
                android:hint="@string/Add_Product_frag_ET_hint_expire_date"
                android:id="@+id/Add_Product_Frag_ET_id_expireDate"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginEnd="10dp"
                android:textAlignment="center"
                android:text="@string/addMarket_frag_BTN_txt_cancel"
                android:id="@+id/Add_Product_Frag_BTN_id_cancel"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginStart="10dp"
                android:textAlignment="center"
                android:text="@string/addMarket_frag_BTN_txt_save"
                android:enabled="true"
                android:id="@+id/Add_Product_Frag_BTN_id_save"/>
        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>