<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:text="@string/addMarket_frag_TV_txt_name"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_weight="3"
            android:id="@+id/addMarket_frag_Et_name"
            android:gravity="center"
            android:autofillHints="name"
            android:inputType="text"
            android:layout_height="match_parent"
            android:hint="@string/addMarket_frag_ET_hint_name"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:text="@string/addMarket_frag_TV_txt_address"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="3"
            android:gravity="center"
            android:autofillHints="address"
            android:inputType="text"
            android:layout_height="match_parent"
            android:hint="@string/addMarket_frag_ET_address"
            android:id="@+id/addMarket_frag_Et_address"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:text="@string/addMarket_frag_TV_txt_phone_number"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="3"
            android:autofillHints="phone"
            android:inputType="number"
            android:layout_height="match_parent"
            android:gravity="center"
            android:hint="@string/addMarket_frag_ET_hint_phone_number"
            android:id="@+id/addMarket_frag_Et_phone_number"/>
    </LinearLayout>

</LinearLayout>