<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.AddProductToMarketFrag">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:text="@string/prod_to_mark_TV_txt_code"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_weight="3"
                android:gravity="center"
                android:autofillHints="code"
                android:inputType="text"
                android:layout_height="match_parent"
                android:hint="@string/prod_to_mark_ET_hint_code"
                android:id="@+id/add_pro_to_market_ET_id_code"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:text="@string/prod_to_mark_TV_txt_name"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:id="@+id/add_pro_to_market_Tv_id_name"
                    />
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_margin="5dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:text="@string/Add_Product_frag_TV_txt_production_date"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:autofillHints="phone"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@color/white"
                    android:id="@+id/add_prod_market_TV_id_production_date"/>
            </LinearLayout>
            <LinearLayout
                android:padding="10dp"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:text="@string/Add_Product_frag_TV_txt_expire_date"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:autofillHints="phone"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@color/white"
                    android:id="@+id/add_prod_market_TV_id_expire_date"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_margin="5dp">
                <Spinner
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:autofillHints="phone"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:id="@+id/add_prod_to_market_spinner"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:autofillHints="price"
                    android:inputType="numberDecimal"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:hint="@string/enter_price"
                    android:id="@+id/add_prod_to_market_Et_id_price"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginEnd="10dp"
                android:textAlignment="center"
                android:text="@string/add_prod_market_BTN_cancel"
                android:id="@+id/add_prod_to_market_BTN_cancel"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginEnd="10dp"
                android:textAlignment="center"
                android:text="@string/btn_add_to_market"
                android:enabled="false"
                android:id="@+id/add_prod_to_market_BTN_add"/>

        </LinearLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>
</FrameLayout>